Lobo / Xiz: * Bug fix at mouse actions menu; * Bug fix at firefox release widget collapse button.
git-svn-id: http://192.168.2.95/svn/repos/trunk@418 014e18b7-1377-44f3-b398-c31593b6cf9d

--- a/ontrack/war/resources/style/Application.css
+++ b/ontrack/war/resources/style/Application.css
@@ -40,6 +40,7 @@ html,body {
 
 .gwt-MenuBar-vertical > table {
 	width: 100%;
+	border-spacing: 2px;
 }
 
 .gwt-MenuBar .gwt-MenuItem {
